# todolist-os-termpaper

./: .dockerignore  .gitignore  Dockerfile.backend  docker-compose.yaml
backend/: Dockerfile  pyproject.toml  readme.md
backend/app/: __init__.py
backend/app/db/models/: __init__.py  tasks.py  users.py
backend/app/main/: __init__.py  routes.py
backend/app/models/: users.py
backend/app/schemas/: __init__.py  plain_schemas.py  tasks_schemas.py  users_schemas.py
backend/app/tasks/: __init__.py  routes.py
backend/app/users/: __init__.py  routes.py
frontend/: .dockerignore  Dockerfile  nginx.conf  package-lock.json  supervisord.conf
frontend/src/: dashboard.html  dashboard.js  input.css  login.html  login.js  notfound.html  output.css
